Add landmark ARIA roles

--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -3,7 +3,7 @@
     <%= partial 'partials/global_nav' %>
   </header>
 
-  <div class="body-content-container wrap-container">
+  <div class="body-content-container wrap-container" role="main">
     <nav id="toc" class="sidebar" data-waypoint="sidebar">
       <%= partial 'partials/documentation_nav' %>
     </nav>
