--- a/source/localizable/_footer.html.erb
+++ b/source/localizable/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer" data-waypoint="footer">
+<footer class="footer" data-waypoint="footer" role="contentinfo">
   <div class="wrap-container">
     <div class="footer-column">
       <article class="footer-site-information">
