--- a/source/localizable/community.html.erb
+++ b/source/localizable/community.html.erb
@@ -4,7 +4,7 @@ layout: layout
 
 <%= partial 'partials/global_nav' %>
 
-<div class="body-content-container">
+<div class="body-content-container" role="main">
   <section class="community-preview wrap-container">
     <div class="community-main-icon">
     </div>
