--- a/source/partials/_documentation_search.erb
+++ b/source/partials/_documentation_search.erb
@@ -1,4 +1,4 @@
-<div id="search">
+<div id="search" role="search">
   <form>
     <input class="st-search-input" id="st-search-input" type="search" placeholder="Search the docs">
   </form>
