--- a/source/partials/_global_nav.erb
+++ b/source/partials/_global_nav.erb
@@ -1,4 +1,4 @@
-<nav class="global-nav" data-waypoint="global-nav">
+<nav class="global-nav" data-waypoint="global-nav" role="navigation">
   <section class="wrap-container">
     <header class="global-nav-item logo-text">
       <%= link_to t("navigation.logo"), "#{locale_prefix}/", class:
