Remove scroll anitmation on home page

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -24,14 +24,14 @@ layout: layout
   <section class="introduction">
     <div class="introduction-container" data-waypoint="introduction-container">
       <div class="introduction-item second-graphic">
-        <div class="introduction-item-graphic-wrapper box-left">
+        <div class="introduction-item-graphic-wrapper">
           <div class="introduction-browser browser">
             <pre class="introduction-browser-body browser-body">
               <code class="browser-code">$ middleman init project</code>
             </pre>
           </div>
         </div>
-        <div class="introduction-item-text-wrapper box-right">
+        <div class="introduction-item-text-wrapper">
           <h4 class="introduction-item-header">
             <%= t("introduction.first.header") %>
           </h4>
@@ -46,7 +46,7 @@ layout: layout
       </div>
 
       <div class="introduction-item third-graphic">
-        <div class="introduction-item-text-wrapper box-left">
+        <div class="introduction-item-text-wrapper">
           <h4 class="introduction-item-header">
             <%= t("introduction.second.header") %>
           </h4>
@@ -59,7 +59,7 @@ layout: layout
               class: "cta-link-body" %>
           </p>
         </div>
-        <div class="introduction-item-graphic-wrapper box-right">
+        <div class="introduction-item-graphic-wrapper">
           <div class="introduction-browser browser">
             <div class="introduction-browser-body">
               <div class="browser-text-editor">
@@ -70,13 +70,13 @@ layout: layout
       </div>
 
       <div class="introduction-item fourth-graphic">
-        <div class="introduction-item-graphic-wrapper box-left">
+        <div class="introduction-item-graphic-wrapper">
           <div class="introduction-browser browser">
             <div class="introduction-browser-body introduction-browser-window browser-body">
             </div>
           </div>
         </div>
-        <div class="introduction-item-text-wrapper box-right">
+        <div class="introduction-item-text-wrapper">
           <h4 class="introduction-item-header">
             <%= t("introduction.third.header") %>
           </h4>
