Move partials into partials directory

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,6 @@
     <%= yield %>
     <%= partial "localizable/footer" %>
     <%= javascript_include_tag :site %>
-    <%= partial "layouts/tracking" %>
+    <%= partial "partials/tracking" %>
   </body>
 </html>
