--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -16,6 +16,7 @@ h5,
 h6 {
   color: $header-font-color;
   font-family: $header-font-family;
+  font-weight: normal;
   line-height: $header-line-height;
   margin-bottom: 0.3em;
   text-rendering: optimizeLegibility; // Fix the character spacing for headings
