Refine color styles

--- a/source/stylesheets/modules/_built-with-middleman.scss
+++ b/source/stylesheets/modules/_built-with-middleman.scss
@@ -17,7 +17,7 @@
   transition: all .2s linear;
 
   &:hover {
-    background: lighten($saturated-blue, 42);
+    background: lighten($mm-blue, 42);
   }
 }
 
