--- a/source/stylesheets/modules/_footer.scss
+++ b/source/stylesheets/modules/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: $base-footer-color;
+  background-color: tint($mm-light-gray, 90%);
   color: $medium-gray;
   padding: 1em 0;
 
