--- a/source/stylesheets/modules/_global-nav.scss
+++ b/source/stylesheets/modules/_global-nav.scss
@@ -1,7 +1,7 @@
 .global-nav {
   height: $global-nav-height;
   transition: 0.3s ease all;
-  background-color: $golden-yellow;
+  background-color: $mm-yellow;
   padding: 1em 0;
   position: relative;
 }
