--- a/source/stylesheets/modules/landing/_community.scss
+++ b/source/stylesheets/modules/landing/_community.scss
@@ -43,6 +43,6 @@
 }
 
 .community-social-link {
-  @include button-outline("fill", $navy, white);
+  @include button-outline("fill", $mm-navy, white);
 }
 
