--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -83,13 +83,13 @@ picture {
 
 blockquote {
   border-left: 2px solid $base-border-color;
-  color: lighten($base-font-color, 15);
+  color: lighten($base-font-color, 15%);
   margin: $base-spacing 0;
   padding-left: $base-spacing / 2;
 }
 
 cite {
-  color: lighten($base-font-color, 25);
+  color: lighten($base-font-color, 25%);
   font-style: italic;
 
   &:before {
@@ -98,7 +98,7 @@ cite {
 }
 
 code {
-  background-color: lighten($slate-gray, 37);
+  background-color: lighten($mm-slate-gray, 37%);
   border-radius: $base-border-radius;
   font-family: $monospace-font-family;
   font-size: 1rem;
