--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -37,63 +37,55 @@ $base-spacing: $base-line-height * 1em;
 $base-z-index: 0;
 
 // Colors
-$blue: #477DCA;
-$dark-gray: #4A4E56;
+$dark-gray: #4a4e56;
 $medium-gray: #999;
-$light-gray: #DDD;
-$light-red: #FBE3E4;
-$light-yellow: #FFF6BF;
-$light-green: #E6EFC2;
 
 // Middleman colors
-$golden-yellow: #F3C859;
-$golden-yellow-dark: #B69642;
-$navy: #446184;
-$slate-gray: #8990A1;
-$translucent-gray: rgba(black, 0.25);
-$saturated-blue: #4280CA;
-$washed-out-gray: #F9F9F8;
+$mm-yellow: #f3c859;
+$mm-navy: #446184;
+$mm-slate-gray: #8990a1;
+$mm-light-gray: #c0c0c0;
+$mm-blue: #4280ca;
 
 // Font Colors
-$base-font-color: darken($slate-gray, 8);
-$base-accent-color: $golden-yellow;
+$base-font-color: darken($mm-slate-gray, 8%);
+$base-accent-color: $mm-yellow;
 $header-font-color: $dark-gray;
-$secondary-accent-color: $saturated-blue;
+$secondary-accent-color: $mm-blue;
 
 // Background Color
-$base-background-color: white;
+$base-background-color: #fff;
 $base-hero-color: $base-accent-color;
-$base-footer-color: $washed-out-gray;
 
 // Link Colors
 $base-link-color: $secondary-accent-color;
-$hover-link-color: darken($base-link-color, 15);
+$hover-link-color: darken($base-link-color, 15%);
 $base-button-color: $base-link-color;
 $hover-button-color: $hover-link-color;
 
 // Border color
-$base-border-color: lighten($translucent-gray, 60);
+$base-border-color: lighten($mm-light-gray, 60%);
 $base-border: 1px solid $base-border-color;
 
 // Forms
 $form-border-color: $base-border-color;
-$form-border-color-hover: darken($base-border-color, 10);
+$form-border-color-hover: darken($base-border-color, 10%);
 $form-border-color-focus: $base-accent-color;
 $form-border-radius: $base-border-radius;
-$form-box-shadow: inset 0 1px 3px rgba($slate-gray,0.06);
-$form-box-shadow-focus: $form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5), 0.7);
+$form-box-shadow: inset 0 1px 3px rgba($mm-slate-gray,0.06);
+$form-box-shadow-focus: $form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5%), 0.7);
 $form-font-size: $base-font-size;
 $form-font-family: $base-font-family;
 
 // Browser Colors
-$browser-bar-color: #DEDEDE;
+$browser-bar-color: #dedede;
 $browser-body-color: $dark-gray;
 
 // Global Nav Variables
 $global-nav-height: em(64);
-$global-nav-link-color: white;
+$global-nav-link-color: #fff;
 $global-nav-link-hover-color: rgba($global-nav-link-color, 0.75);
 
 // Footer Variables
 $footer-link-color: $medium-gray;
-$footer-link-hover-color: darken($footer-link-color, 10);
+$footer-link-hover-color: darken($footer-link-color, 10%);
