--- a/source/stylesheets/mixins/_button.scss
+++ b/source/stylesheets/mixins/_button.scss
@@ -23,7 +23,7 @@
 }
 
 
-@mixin button-outline($type: "darken", $font-color: $navy, $secondary-color:
+@mixin button-outline($type: "darken", $font-color: $mm-navy, $secondary-color:
 transparent) {
   @include button;
   border: 2px solid $font-color;
