--- a/source/stylesheets/modules/landing/_introduction.scss
+++ b/source/stylesheets/modules/landing/_introduction.scss
@@ -100,14 +100,14 @@
 
 .cta-link-body {
   border-radius: $base-border-radius;
-  border: 1px solid $navy;
+  border: 1px solid $mm-navy;
   display: inline-block;
   margin-top: 1em;
   padding: 0.2em 0.7em 0.2em 0.5em;
 
   &:after {
     @include size(16px);
-    color: $navy;
+    color: $mm-navy;
     content: "\25B6";
     display: inline-block;
     font-size: .75em;
@@ -117,8 +117,8 @@
   }
 
   &:hover {
-    border-color: $navy;
-    background-color: lighten($navy, 45);
+    border-color: $mm-navy;
+    background-color: lighten($mm-navy, 45);
     transition: all .3s ease-in-out;
 
     &:after {
