--- a/source/stylesheets/base/_grid-settings.scss
+++ b/source/stylesheets/base/_grid-settings.scss
@@ -1,10 +1,4 @@
-@import "neat-helpers"; // or "../neat/neat-helpers" when not in Rails
-
-// Neat Overrides
-// $column: 90px;
-// $gutter: 30px;
-// $grid-columns: 12;
-// $max-width: em(1088);
+@import "neat-helpers";
 
 // Neat Breakpoints
 $medium-screen: em(640);
