--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -28,6 +28,7 @@ $header-line-height: 1.25;
 // Other Sizes
 $base-border-radius: 3px;
 $base-spacing: $base-line-height * 1em;
+$small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
@@ -47,29 +48,23 @@ $base-accent-color: $mm-yellow;
 $header-font-color: $dark-gray;
 $secondary-accent-color: $mm-blue;
 
-// Background Color
-$base-background-color: #fff;
-$base-hero-color: $base-accent-color;
-
 // Link Colors
 $base-link-color: $secondary-accent-color;
 $hover-link-color: darken($base-link-color, 15%);
 $base-button-color: $base-link-color;
 $hover-button-color: $hover-link-color;
 
+// Background Color
+$base-background-color: #fff;
+$base-hero-color: $base-accent-color;
+
 // Border color
-$base-border-color: lighten($mm-light-gray, 60%);
+$base-border-color: tint($mm-light-gray, 75%);
 $base-border: 1px solid $base-border-color;
 
 // Forms
-$form-border-color: $base-border-color;
-$form-border-color-hover: darken($base-border-color, 10%);
-$form-border-color-focus: $base-accent-color;
-$form-border-radius: $base-border-radius;
-$form-box-shadow: inset 0 1px 3px rgba($mm-slate-gray,0.06);
-$form-box-shadow-focus: $form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5%), 0.7);
-$form-font-size: $base-font-size;
-$form-font-family: $base-font-family;
+$form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
+$form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($base-accent-color, $lightness: -5%, $alpha: -0.3);
 
 // Browser Colors
 $browser-bar-color: #dedede;
