--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,7 +10,7 @@
   </head>
   <body>
     <%= yield %>
-    <%= partial "localizable/footer" %>
+    <%= partial "partials/site_footer" %>
     <%= javascript_include_tag :site %>
     <%= partial "partials/tracking" %>
   </body>
