--- a/source/partials/_docs_nav.erb
+++ b/source/partials/_docs_nav.erb
@@ -1,4 +1,4 @@
-<%= partial "partials/_documentation_search" %>
+<%= partial "partials/docs_search" %>
 <div class="toc-block-container">
   <div class="toc-block">
     <h3 class="docs-section-heading"><%= t("navigation.basics.title") %></h3>
