Layout for site hero

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -4,14 +4,14 @@ layout: layout
 
 <%= partial 'partials/site_nav' %>
 
-<header class="" role="banner">
+<header class="site-hero" role="banner">
   <div class="container">
     <%= partial 'partials/middleman_logo' %>
-    <h2><%= t("index.headline") %></h2>
-    <h3><%= t("index.description") %></h3>
-    <pre class="">
+    <h2 class="site-hero-tagline"><%= t("index.tagline") %></h2>
+    <h3 class="site-hero-description"><%= t("index.description") %></h3>
+    <!-- <pre class="">
       <code class="">$ gem install middleman</code>
-    </pre>
+    </pre> -->
   </div>
 </header>
 
