--- a/source/partials/_middleman_logo.erb
+++ b/source/partials/_middleman_logo.erb
@@ -1,1 +1,9 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" enable-background="new 0 0 500 500"><g><path fill="transparent" d="M1.3 0h500v500H1.3z"/><path fill="#fff" d="M446 165.2v172.1l-41.7 5.4V233.6l-40.8 76.9h-.9l-43-77.2v119l-49.1 4.4V141.5l52.6 7.4 40.3 76.6 38.3-65.9zM445 115.7L254 77.2v27.2l191 32.4z"/><path d="M59.9 164.9v170.8l41.7 7.1V234.7l40.8 76.9h.9l43-77.2v116.2l49.2 7.3V141.2l-52.7 7.4-40.3 78.1-38.3-68.8zM59 115.7l195-38.5v28.6L59 138.1z" opacity=".35"/><path fill="#fff" d="M445 380.6L254 419v-28.5l191-31z"/><path opacity=".35" d="M59 380.6L254 419v-28.5L59 358.1z"/></g></svg>
+<svg class="middleman-logo-svg" viewBox="0 0 400 340" version="1.1" xmlns="http://www.w3.org/2000/svg" aria-labelledby="title" role="img">
+  <title id="title">Middleman Logo</title>
+  <path id="bottom-right-bar" fill="#fff" d="M200,280 L400,320 L400,340 L200,310 L200,280 Z" transform="translate(300.000000, 310.000000) scale(1, -1) translate(-300.000000, -310.000000)"></path>
+  <path id="bottom-left-bar" fill-opacity="0.3" fill="#000" d="M0,320 L200,280 L200,310 L0,340 L0,320 Z" transform="translate(100.000000, 310.000000) scale(1, -1) translate(-100.000000, -310.000000)"></path>
+  <path id="right-m" fill="#fff" d="M400,78 L400,262 L355,267 L355,152 L310,235 L263,152 L263,281 L210,288 L210,52 L267,60 L310,143 L353,73 L400,78 Z"></path>
+  <path id="left-m" fill-opacity="0.3" fill="#000" d="M190,78 L190,262 L145,267 L145,152 L100,235 L53,152 L53,281 L0,288 L0,52 L57,60 L100,143 L143,73 L190,78 Z" transform="translate(95.000000, 170.000000) scale(-1, 1) translate(-95.000000, -170.000000)"></path>
+  <path id="top-right-bar" fill="#fff" d="M200,0 L400,40 L400,60 L200,30 L200,0 Z"></path>
+  <path id="top-left-bar" fill-opacity="0.3" fill="#000" d="M0,40 L200,0 L200,30 L0,60 L0,40 Z"></path>
+</svg>
